# oono-ent

./: .gitignore  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ios.ts  vite.config.ts
ios/: project.yml
ios/OonoEnt/: AppBundleHandler.swift  AudioSessionManager.swift  ContentView.swift  HLSProxyHandler.swift  Info.plist  OonoEntApp.swift  WebViewContainer.swift
scripts/: build-acestream-vm.sh  build-vm-host.sh  build-vsock-bridge.sh
src/: App.tsx  api.ts  index.css  main.tsx  store.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries-src/: oono-vm-host.entitlements  oono-vm-host.swift
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/vm/: manifest.json
src-tauri/src/: acestream.rs  data.rs  db.rs  engine_runtime.rs  epg.rs  health.rs  lib.rs  m3u.rs  main.rs  proxy.rs  radio.rs  sources.rs  sports.rs  state.rs  vm_host.rs  vod.rs
src/api/: tauri.ts  web.ts
src/components/: channel-card.tsx  discover-filters.tsx  person-tile.tsx  player.tsx  poster-row.tsx  radio-player.tsx  resize-handle.tsx  sidebar.tsx  sports-schedule.tsx  tmdb-key-empty.tsx  tray-sync.tsx  vod-persistent.tsx
src/hooks/: useLongPress.ts  useResizable.ts
src/lib/: fullscreen.ts  pip.ts  tmdb.ts
src/pages/: acestream.tsx  browse-vod.tsx  browse.tsx  favorites.tsx  home.tsx  movies.tsx  person.tsx  radio.tsx  series.tsx  settings.tsx  vod-detail.tsx  watch.tsx  watchlist.tsx
vm-image/: Dockerfile  entrypoint.sh  init.sh  udhcpc.sh
vm-image/vsock-bridge/: Cargo.toml
(+5 files in other folders)
